--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for index in cities:\n",
-    "    names_and_ranks.append(index+1) \n",
+    "    names_and_ranks.append(index+1+\". \"+) \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
