--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "for index in city_indi:\n",
+    "for index in city_indices:\n",
     "    names_and_ranks.append(city_indices[index]+1+\". \"+) \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
