--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for index in list(:\n",
+    "for index in list(range(len(cities))):\n",
     "    city_populations[index] = cities[index]['Population']\n",
     "city_populations"
    ]
