--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,8 @@
     "city_populations = []\n",
     "#for index in list(range(len(cities))):\n",
     "#    city_populations[index] = cities[index]['Population']\n",
-    "city_populations"
+    "#city_populations\n",
+    "len()"
    ]
   },
   {
