--- a/index.ipynb
+++ b/index.ipynb
@@ -292,8 +292,7 @@
     "city_populations = []\n",
     "#for index in list(range(len(cities))):\n",
     "#    city_populations[index] = cities[index]['Population']\n",
-    "#city_populations\n",
-    "rangelen(cities)"
+    "#city_populations\n"
    ]
   },
   {
