automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,8 @@
     "city_populations = []\n",
     "#for index in list(range(len(cities))):\n",
     "#    city_populations[index] = cities[index]['Population']\n",
-    "#city_populations\n"
+    "#city_populations\n",
+    "cities[11][]"
    ]
   },
   {
