--- a/index.ipynb
+++ b/index.ipynb
@@ -274,16 +274,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-17-823b8d0ae525>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-823b8d0ae525>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    list(range(len(cities))\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -291,7 +293,7 @@
     "#for index in list(range(len(cities))):\n",
     "#    city_populations[index] = cities[index]['Population']\n",
     "#city_populations\n",
-    "list(range(len(cities))"
+    "list(range(len(cities)))"
    ]
   },
   {
