--- a/index.ipynb
+++ b/index.ipynb
@@ -290,10 +290,9 @@
    ],
    "source": [
     "city_populations = []\n",
-    "#for index in list(range(len(cities))):\n",
-    "#    city_populations[index] = cities[index]['Population']\n",
-    "#city_populations\n",
-    "list(range(len(cities)))"
+    "for index in list(range(len(cities))):\n",
+    "    city_populations[index] = cities[index]['Population']\n",
+    "city_populations"
    ]
   },
   {
