automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
     "for index in list(range(len(cities))):\n",
     "    print(index)\n",
     "    city_populations[index] = cities[index]['Population']\n",
-    "city_populations"
+    "cities[index]['Population']"
    ]
   },
   {
