--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
    "source": [
     "city_populations = []\n",
     "for index in list(range(len(cities))):\n",
-    "    print(index)\n",
+    "    #print(index)\n",
     "    #city_populations[index] = cities[index]['Population']\n",
     "cities[0]['Population']"
    ]
