--- a/index.ipynb
+++ b/index.ipynb
@@ -274,41 +274,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "2891000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "city_populations = []\n",
-    "for index in list(range(len(cities))):\n",
+    "#for index in list(range(len(cities))):\n",
     "    #print(index)\n",
     "    #city_populations[index] = cities[index]['Population']\n",
     "cities[0]['Population']"
