--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "city_populations = []\n",
     "for index in list(range(len(cities))):\n",
     "    print(index)\n",
-    "    city_populations[index] = cities[index]['Population']"
+    "    city_populations.append(cities[index]['Population'])"
    ]
   },
   {
