--- a/index.ipynb
+++ b/index.ipynb
@@ -274,64 +274,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[2891000,\n",
-       " 2800000,\n",
-       " 2581000,\n",
-       " 928850,\n",
-       " 559277,\n",
-       " 287651,\n",
-       " 84554,\n",
-       " 60000,\n",
-       " 32237,\n",
-       " 4000,\n",
-       " 1700,\n",
-       " 0]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_populations = []\n",
     "for index in list(range(len(cities))):\n",
-    "    print(index)\n",
-    "    city_populations.append(cities[index]['Population'])\n",
-    "city_populations"
+    "    city_populations.append(cities[index]['Population'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
