--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for index in len(range(cities))"
    ]
   },
   {
