automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -427,7 +427,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for index in len(range(cities))"
+    "for index in len(range(cities)):\n",
+    "    city_areas.append"
    ]
   },
   {
