--- a/index.ipynb
+++ b/index.ipynb
@@ -428,7 +428,7 @@
    "source": [
     "city_areas = []\n",
     "for index in len(range(cities)):\n",
-    "    city_areas.append"
+    "    city_areas.append()"
    ]
   },
   {
