automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -428,7 +428,8 @@
    "source": [
     "city_areas = []\n",
     "for index in len(range(cities)):\n",
-    "    city_areas.append(cities[index])"
+    "    city_areas.append(cities[index]['Area'])\n",
+    "city_"
    ]
   },
   {
