automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
    ],
    "source": [
     "city_areas = []\n",
-    "for index in len(range(cities)):\n",
+    "for index in list(len(range(cities)):\n",
     "    city_areas.append(cities[index]['Area'])\n",
     "city_areas"
    ]
